add move block up&down feature

--- a/static/grid.html
+++ b/static/grid.html
@@ -24,7 +24,7 @@
                         Come play all our shit<sup>&reg;&copy;&trade;</sup
                         ><br />
                         <sub>Tip: click a block, then the piece of shit, to edit
-                        blocks; OK submits, CLR clears, while &lt; and &gt; move
+                        blocks; OK submits, CLR clears, while &lt;&gt;^v move
                         blocks. When something is wrong, either click the block
                         again or refresh.</sub>
                     </p>
@@ -87,6 +87,22 @@
                     onclick="swap('right')"
                 >
                     &gt;
+                </button>
+
+                <button
+                    id="swap-up"
+                    class="btn btn-secondary btn-m"
+                    onclick="swap('up')"
+                >
+                    ^
+                </button>
+
+                <button
+                    id="swap-down"
+                    class="btn btn-secondary btn-m"
+                    onclick="swap('down')"
+                >
+                    v
                 </button>
             </div>
             <br />
